plugins/kotlin/idea/tests/testData/gradle/multiplatform/core/features/projectIsolation/jvmIncludeBuild/my-app/src/main/kotlin/org/example/myapp/Main.kt
package org.example.myapp

fun <!LINE_MARKER!>main<!>() {
    println("Hello from my app!")
}
